# fractalApp

./: .gitignore  AGENTS.md  AI-AGENT-CHAT-ZIP-MANIFEST.md  BLOCK-MANIFEST.json  BLOCK-VERSIONED-BLOCKS-ZIP-MANIFEST.md  FRACTAL-APP-CONTRACT-ZIP-MANIFEST.md  MAIN-WINDOW-VERSIONS-ZIP-MANIFEST.md  PROJECT-STAGE-V1-11.md  PROJECT-STAGE-V1-12.md  PROJECT-STAGE-V1-13-current.md  PROJECT-STAGE-V1-13.md  README-APPLY.md  README.md  UI-SYSTEM-ZIP-MANIFEST.md  VERSION-REGISTRY-UI-ZIP-MANIFEST.md  VERSION-SWITCHER-INTERACTION-FIX-MANIFEST.md  index.html  package.json  pnpm-lock.yaml  smartlog-real-integration.patch  tsconfig.json  tsconfig.node.json  vite.config.ts
.ai/: !-current-plan  !info.md  giHub-link.md  router.md  start.md
.github/: copilot-instructions.md
README/: Next-my-plan.txt  PROJECT-STAGE-V1-04.md  PROJECT-STATE-06-21.md  PROJECT-STATE-V-07.md  PROJECT-State-V1-0.md  PROJECT_STAGE-V1-09.md
docs/: AI-AGENT-CHAT-BLOCKS.md  AI-AGENT-CHAT-PARALLEL-AGENTS.md  AI-AGENT-CHAT-SAFETY.md  AI-AGENT-CHAT-TOKEN-BUDGET.md  AI-AGENT-CHAT.md  BASELINE.md  BLOCK-AI-PATCH-RULES.md  BLOCK-GATES.md  BLOCK-MANIFEST.md  BLOCK-NAMING.md  BLOCK-PRODUCTION-CHECKLIST.md  BLOCK-UPDATE-ROLLBACK.md  COMPONENT-TEMPLATE.md  DESIGN-TOKENS.md  FRACTAL-APP-CONTRACT.md  FRACTAL-APP-GATES.md  FRACTAL-APP-MANIFEST.md  FRACTAL-APP-PERMISSIONS.md  LOCAL-CHECK.md  MOTION-RULES.md  NEXT.md  PREMIUM-UI-RULES.md  UI-AI-AGENT-RULES.md  UI-SYSTEM.md  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: core.rs  llog.rs  main.rs  metrics.rs  smart_log.rs
(+355 files in other folders)
