[package]
name = "fractal_app"
version = "0.8.0"
description = "fractalApp desktop core"
authors = ["fractalApp"]
edition = "2021"

[lib]
name = "fractal_app_lib"
path = "src/core.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
